# pnpm-mono-tools

./: .editorconfig  .gitignore  .stylish-haskell.yaml  CHANGELOG.md  mono-tools.cabal  readme.md
.github/workflows/: ci.yml  release.yml
app/: Main.hs
src/: Main.hs
src/Command/: AuditInstalled.hs  AuditPackages.hs  CLI.hs  Shared.hs
src/Data/: Dependencies.hs  Task.hs
src/Lib/: Report.hs  Util.hs
src/Sources/: PackageJson.hs  Pnpm.hs
