cabal-version:        2.4
name:                 mono-tools
version:              0.1.0.0
synopsis:             A highly opionated set of tools for managing dependencies in a PNPM/Turbo monorepos
author:               Joseph Walker
maintainer:           joseph.walker@outlook.com
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    Sources.Pnpm
                    , Data.Dependencies
                    , Lib.Report
                    , Lib.Util
  build-depends:      base ^>=4.16.3.0
                    , aeson
                    , containers
                    , bytestring
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

executable mono-tools
  main-is:            Main.hs
  build-depends:      base ^>=4.16.3.0
                    , mono-tools
                    , bytestring
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
