cabal-version:        2.4
name:                 mono-tools
version:              0.1.0.0
synopsis:             A highly opionated set of tools for managing dependencies in a PNPM/Turbo monorepos
author:               Joseph Walker
maintainer:           joseph.walker@outlook.com
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    Command.CLI
  other-modules:      Command.AuditInstalled
                    , Data.Dependencies
                    , Data.Task
                    , Lib.Report
                    , Lib.Util
                    , Sources.Pnpm
  build-depends:      base ^>=4.16.3.0
                    , aeson
                    , bytestring
                    , containers
                    , mtl
                    , optparse-applicative
                    , process
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

executable mono-tools
  main-is:            Main.hs
  build-depends:      base ^>=4.16.3.0
                    , mono-tools
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
