cabal-version:        2.4
name:                 mono-tools
version:              0.1.0.0
synopsis:             A highly opionated set of tools for managing dependencies in a PNPM/Turbo monorepos
author:               Joseph Walker
maintainer:           joseph.walker@outlook.com
extra-source-files:   CHANGELOG.md

executable mono-tools
  main-is:            Main.hs
  other-modules:      Command.AuditInstalled
                    , Command.AuditPackages
                    , Command.CLI
                    , Command.Shared
                    , Data.Dependencies
                    , Data.Task
                    , Lib.Report
                    , Lib.Util
                    , Sources.PackageJson
                    , Sources.Pnpm
  build-depends:      base                ^>=4.16.3.0
                    , aeson                >= 2.1.1  && < 2.2
                    , bytestring           >= 0.11.3 && < 0.12
                    , containers           >= 0.6.5  && < 0.7
                    , mtl                  >= 2.2.2  && < 2.3
                    , optparse-applicative >= 0.17.0 && < 0.18
                    , process              >= 1.6.13 && < 1.7
                    , Glob
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

